--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1 class="block">repository</h1>
+    <img src="C:\Users\USER\Pictures\All picture/sojib.jpeg" alt="" height="300">
     <h2>sojib hossein</h2>
-    <img src="Downloads/sojib.jpeg" alt="" height="150">
 </body>
 </html>
