--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my secend github repo</title>
     <link rel="stylesheet" href="style2.css">
+    
 </head>
 <body>
-    <h1 class="block">repository</h1>
-    <img src="C:\Users\USER\Pictures\All picture/sojib.jpeg" alt="" height="300">
-    <h2>sojib hossein</h2>
+   <h1>may fast repo</h1>
+   <i><p class="me">sojib hossain</p></i>
+   <img src="C:\Users\USER\Pictures\All picture/sojib.jpeg" alt="">
+
 </body>
 </html>
